--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-three/drei": "^7.22.9",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.8.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.134.0"
   }
 }
